--- a/TestProject/composer.json
+++ b/TestProject/composer.json
@@ -15,6 +15,7 @@
         "dompdf/dompdf": "^2.0",
         "endroid/qr-code-bundle": "^5.0",
         "knplabs/knp-paginator-bundle": "^5.9",
+        "php-flasher/flasher-symfony": "^1.15",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpoffice/phpspreadsheet": "^1.29",
         "phpstan/phpdoc-parser": "^1.24",
